--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@ $def with (question, count, nearby_objects_values)
 $if question == 'begin':
     <header>
         <hgroup>
-            <h1>Welcome to 20 Questions!</h1>
+            <h1>Bienvenue dans Bafekinator !</h1>
         </hgroup>
     </header>
-    <h1>Think of a person (real or fictional)...</h1>
+    <h1>Pensez à un article de <a href="https://bafe.fr">bafe.fr</a>...</h1>
     <br />
     <form action="/begin" method="post">
         <input type="submit" value="Begin!">
