--- a/templates/learn.html
+++ b/templates/learn.html
@@ -4,11 +4,11 @@ $def with(nearby_objects)
     <h1>Who were you thinking of?</h1>
     
     $for object in nearby_objects:
-        <label><input type="radio" name="name" class="known" value="$object.name">$object.name</label><br>
+        <label><a href="$object.link"><input type="radio" name="name" class="known" value="$object.name">$object.name</a></label><br>
     
-    <input type="radio" name="name" id="unknown" value="new"><input type="text" name="new_character" id="new_character" readonly="readonly"><br>
+    <input type="radio" name="name" id="unknown" value="new"><input type="text" name="new_article" id="new_article" readonly="readonly"><br>
     
-    <h2 id="suggest">Suggest a question <strong>(optional)</strong> and answer for the correct character?</h2>
+    <h2 id="suggest">Suggest a question <strong>(optional)</strong> and answer for the correct article?</h2>
     <p><input type="text" name="question"><label><input type="radio" name="new_question_answer" value="yes">Yes</label><label><input type="radio" name="new_question_answer" value="no">No</label></p>
      
     <p><input type="submit" value="submit"></p>      
