retrain and admin don't work

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@ $def with (page)
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>20 Questions</title>
     <meta charset="utf-8" />
@@ -11,7 +12,13 @@ $def with (page)
     <script src="/static/answer_actions.js"></script>
     <script src="/static/learn_actions.js"></script>
 </head>
+
 <body>
-$:page
+    $:page
+    <footer>Crédits : <a href="https://bafe.fr">bafe.fr</a>, <a
+            href="https://github.com/rouge8/20questions/">rouge8/20questions</a> et <a
+            href="https://gitlab.com/ketsapiwiq/bafekinator">ketsapiwiq/bafekinator</a><br>
+        <a href="/admin/data">Entraîner l'algorithme</a> · <a href="/admin">Administration</a></footer>
 </body>
+
 </html>
