--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@ $def with (page)
     $:page
     <footer>Crédits : <a href="https://bafe.fr">bafe.fr</a>, <a
             href="https://github.com/rouge8/20questions/">rouge8/20questions</a> et <a
-            href="https://gitlab.com/ketsapiwiq/bafekinator">ketsapiwiq/bafekinator</a><br>
+            href="https://gitlab.com/ketsapiwiq/akinarticle">ketsapiwiq/akinarticle</a><br>
         <a href="/admin/data">Entraîner l'algorithme</a> · <a href="/admin">Administration</a></footer>
 </body>
 
