--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@ $def with (question, count, nearby_objects_values)
 $if question == 'begin':
     <header>
         <hgroup>
-            <h1>Baf(f)ekinator</h1>
+            <h1>Akinarticle</h1>
         </hgroup>
     </header>
-    <p>Chercher un article de <a href="https://bafe.fr">bafe.fr</a> en répondant à des questions...</p>
+    <p>Trouve un article de <a href="https://bafe.fr">bafe.fr</a> en répondant à des questions...</p>
     <br />
     <form action="/begin" method="post">
         <input type="submit" value="Commencer !">
