--- a/templates/retrain.html
+++ b/templates/retrain.html
@@ -1,11 +1,11 @@
-$def with (object, questions, data)
+$def with (object, weighted_questions_for_object)
 <div id="retrain">
 <h1>$object.name</h1>
 <form name="retrain" action="/admin/retrain/$object.id" method="post">
     <table>
-    $for question in questions:
+    $for question in weighted_questions_for_object:
         <tr>
-            <td>$question.text: <span class="value">current=$data[(object.id, question.id)]</span></td>
+            <td>$question.text: <span class="value">$question.value</span></td>
             <td><label><input type="radio" name="$question.id" value="yes">Yes</label><label><input type="radio" name="$question.id" value="unsure">Unsure</label><label><input type="radio" name="$question.id" value="no">No</label></td>
         </tr>
     </table>
